changes color theme for admin panel

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=AjwanShop
+APP_NAME=futureshop
 APP_ENV=local
 APP_KEY=base64:Ca4G4D4RJXbSbfzmzaRxjeO6Pqi0QahgajpcClQPyS4=
 APP_DEBUG=true
@@ -9,15 +9,15 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
 DB_PORT=3306
+DB_HOST=127.0.0.1
 DB_DATABASE=future-shop
 DB_USERNAME=root
 DB_PASSWORD=48648
 
-# DB_DATABASE=ajwansho_ajwanshop
-# DB_USERNAME=ajwansho_mahfuz
-# DB_PASSWORD=*Mahfuz2
+# DB_DATABASE=rabbyfar_futureshop
+# DB_USERNAME=rabbyfar_futureshop
+# DB_PASSWORD=vEOO2DeD@HD[
 
 
 BROADCAST_DRIVER=log
